--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="/css/slick.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header__top-inner">
           <a class="logo" href="#">
-            <img class="logo__img" src="/images/logo.svg" alt="Логотип">
+            <img class="logo__img" src="images/logo.svg" alt="Логотип">
           </a>
           <nav class="menu">
             <button class="menu__btn">
@@ -79,7 +79,7 @@
             Школа серфинга на канарских Островах
           </h4>
           <a class="header__icon" href="#">
-            <img src="/images/mouse.svg" alt="Иконка мыши">
+            <img src="images/mouse.svg" alt="Иконка мыши">
           </a>
         </div>
       </div>
@@ -178,21 +178,21 @@
 
           <div class="school__info-item">
             <div class="school__info-box">
-              <img src="/images/wave-icon1.svg" alt="">
+              <img src="images/wave-icon1.svg" alt="">
               <span>85%</span>
             </div>
             <span>Приехали второй раз</span>
           </div>
           <div class="school__info-item">
             <div class="school__info-box">
-              <img src="/images/wave-icon2.svg" alt="">
+              <img src="images/wave-icon2.svg" alt="">
               <span>95%</span>
             </div>
             <span>Научились кататься</span>
           </div>
           <div class="school__info-item">
             <div class="school__info-box">
-              <img src="/images/wave-icon3.svg" alt="">
+              <img src="images/wave-icon3.svg" alt="">
               <span>99%</span>
             </div>
             <span>Довольных клиентов</span>
@@ -297,7 +297,7 @@
     <div class="container">
       <div class="gallery__video">
         <a data-fancybox class="gallery__video-link" href="https://youtu.be/LFDaKUHgK7E">
-          <img src="/images/play.svg" alt="play icon">
+          <img src="images/play.svg" alt="play icon">
         </a>
       </div>
       <div class="gallery__numbers">
@@ -444,17 +444,17 @@
       </div>
       <div class="team__items">
         <div class="team__item">
-          <img src="/images/team/1.jpg" alt="Mike">
+          <img src="images/team/1.jpg" alt="Mike">
           <h6 class="team__name">Mike</h6>
           <p class="team__position">Главный инстуктор</p>
         </div>
         <div class="team__item">
-          <img src="/images/team/2.jpg" alt="Mary">
+          <img src="images/team/2.jpg" alt="Mary">
           <h6 class="team__name">Mary</h6>
           <p class="team__position">инстуктор</p>
         </div>
         <div class="team__item">
-          <img src="/images/team/3.jpg" alt="Ольга">
+          <img src="images/team/3.jpg" alt="Ольга">
           <h6 class="team__name">Ольга</h6>
           <p class="team__position">инстуктор</p>
         </div>
@@ -516,7 +516,7 @@
 
   <div class="map">
     <div class="map__wrapper">
-      <img class="map__img" src="/images/map.jpg" alt="карта">
+      <img class="map__img" src="images/map.jpg" alt="карта">
     </div>
   </div>
 
@@ -566,15 +566,15 @@
     
   <footer class="footer">
       <a href="#">
-        <img src="/images/logo.svg" alt="Логотип">
+        <img src="images/logo.svg" alt="Логотип">
       </a>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/js/mixitup.min.js"></script>
-  <script src="/js/slick.min.js"></script>
-  <script src="/js/jquery.fancybox.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/mixitup.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
